generated-src/antlr/main/me/team/fproject/FLangParser.java
// Generated from FLangParser.g4 by ANTLR 4.5.1
package me.team.fproject;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NEWLINE=1, WS=2, IS=3, IF=4, IN=5, THEN=6, ELSE=7, END=8, FUNC=9, DO=10, 
		LOOP=11, FOR=12, WHILE=13, TRUE=14, FALSE=15, INTEGER=16, REAL=17, BOOLEAN=18, 
		RATIONAL=19, COMPLEX=20, STRING=21, PRINT=22, RETURN=23, BREAK=24, TYPE_CONV=25, 
		LENGTH=26, INT_LIT=27, REAL_LIT=28, RAT_LIT=29, COMP_LIT=30, STR_LIT=31, 
		PLUS=32, MINUS=33, MULT=34, DIVISION=35, LESS=36, GREATER=37, LESS_EQ=38, 
		GREATER_EQ=39, EQUAL=40, NOT_EQ=41, AND=42, OR=43, XOR=44, LINE_FUN=45, 
		ASSIGN=46, LPAR=47, RPAR=48, LSQUARE=49, RSQUARE=50, LCURLY=51, RCURLY=52, 
		SEMI=53, COLUMN=54, COMMA=55, DOT=56, DOTDOT=57, ID=58;
	public static final int
		RULE_program = 0, RULE_declaration = 1, RULE_expression = 2, RULE_expressionEnd = 3, 
		RULE_operatorSign = 4, RULE_secondary = 5, RULE_primary = 6, RULE_elementary = 7, 
		RULE_conditional = 8, RULE_statement = 9, RULE_functionCall = 10, RULE_assignment = 11, 
		RULE_ifStatement = 12, RULE_loopStatement = 13, RULE_loopHeader = 14, 
		RULE_returnStatement = 15, RULE_breakStatement = 16, RULE_printStatement = 17, 
		RULE_functionType = 18, RULE_function = 19, RULE_parameter = 20, RULE_body = 21, 
		RULE_arrayType = 22, RULE_array = 23, RULE_mapType = 24, RULE_map = 25, 
		RULE_pair = 26, RULE_tupleType = 27, RULE_tuple = 28, RULE_tupleElement = 29, 
		RULE_type = 30, RULE_booleanType = 31, RULE_integerType = 32, RULE_realType = 33, 
		RULE_rationalType = 34, RULE_complexType = 35, RULE_stringType = 36;
	public static final String[] ruleNames = {
		"program", "declaration", "expression", "expressionEnd", "operatorSign", 
		"secondary", "primary", "elementary", "conditional", "statement", "functionCall", 
		"assignment", "ifStatement", "loopStatement", "loopHeader", "returnStatement", 
		"breakStatement", "printStatement", "functionType", "function", "parameter", 
		"body", "arrayType", "array", "mapType", "map", "pair", "tupleType", "tuple", 
		"tupleElement", "type", "booleanType", "integerType", "realType", "rationalType", 
		"complexType", "stringType"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, "'is'", "'if'", "'in'", "'then'", "'else'", "'end'", 
		"'func'", "'do'", "'loop'", "'for'", "'while'", "'true'", "'false'", "'integer'", 
		"'real'", "'boolean'", "'rational'", "'complex'", "'string'", "'print'", 
		"'return'", "'break'", null, "'length'", null, null, null, null, null, 
		"'+'", "'-'", "'*'", "'/'", "'<'", "'>'", "'<='", "'>='", "'='", "'/='", 
		"'&'", "'|'", "'^'", "'=>'", "':='", "'('", "')'", "'['", "']'", "'{'", 
		"'}'", "';'", "':'", "','", "'.'", "'..'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "NEWLINE", "WS", "IS", "IF", "IN", "THEN", "ELSE", "END", "FUNC", 
		"DO", "LOOP", "FOR", "WHILE", "TRUE", "FALSE", "INTEGER", "REAL", "BOOLEAN", 
		"RATIONAL", "COMPLEX", "STRING", "PRINT", "RETURN", "BREAK", "TYPE_CONV", 
		"LENGTH", "INT_LIT", "REAL_LIT", "RAT_LIT", "COMP_LIT", "STR_LIT", "PLUS", 
		"MINUS", "MULT", "DIVISION", "LESS", "GREATER", "LESS_EQ", "GREATER_EQ", 
		"EQUAL", "NOT_EQ", "AND", "OR", "XOR", "LINE_FUN", "ASSIGN", "LPAR", "RPAR", 
		"LSQUARE", "RSQUARE", "LCURLY", "RCURLY", "SEMI", "COLUMN", "COMMA", "DOT", 
		"DOTDOT", "ID"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FLangParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(FLangParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(FLangParser.SEMI, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FLangParserListener ) ((FLangParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FLangParserListener ) ((FLangParserListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			declaration();
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEMI) {
				{
				{
				setState(75);
				match(SEMI);
				setState(76);
				declaration();
				}
				}
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(FLangParser.ID, 0); }
		public TerminalNode IS() { return getToken(FLangParser.IS, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode COLUMN() { return getToken(FLangParser.COLUMN, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FLangParserListener ) ((FLangParserListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FLangParserListener ) ((FLangParserListener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(ID);
			setState(85);
			_la = _input.LA(1);
			if (_la==COLUMN) {
				{
				setState(83);
				match(COLUMN);
				setState(84);
				type();
				}
			}

			setState(87);
			match(IS);
			setState(88);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public SecondaryContext secondary() {
			return getRuleContext(SecondaryContext.class,0);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public OperatorSignContext operatorSign() {
			return getRuleContext(OperatorSignContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FLangParserListener ) ((FLangParserListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FLangParserListener ) ((FLangParserListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_expression, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(91);
			secondary(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(99);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ExpressionContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_expression);
					setState(93);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(94);
					operatorSign();
					setState(95);
					expression(2);
					}
					} 
				}
				setState(101);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ExpressionEndContext extends ParserRuleContext {
		public OperatorSignContext operatorSign() {
			return getRuleContext(OperatorSignContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ExpressionEndContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressionEnd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FLangParserListener ) ((FLangParserListener)listener).enterExpressionEnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FLangParserListener ) ((FLangParserListener)listener).exitExpressionEnd(this);
		}
	}

	public final ExpressionEndContext expressionEnd() throws RecognitionException {
		ExpressionEndContext _localctx = new ExpressionEndContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_expressionEnd);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PLUS) | (1L << MINUS) | (1L << MULT) | (1L << DIVISION) | (1L << LESS) | (1L << GREATER) | (1L << LESS_EQ) | (1L << GREATER_EQ) | (1L << EQUAL) | (1L << NOT_EQ) | (1L << AND) | (1L << OR) | (1L << XOR))) != 0)) {
				{
				setState(102);
				operatorSign();
				setState(103);
				expression(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperatorSignContext extends ParserRuleContext {
		public TerminalNode PLUS() { return getToken(FLangParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(FLangParser.MINUS, 0); }
		public TerminalNode MULT() { return getToken(FLangParser.MULT, 0); }
		public TerminalNode DIVISION() { return getToken(FLangParser.DIVISION, 0); }
		public TerminalNode LESS() { return getToken(FLangParser.LESS, 0); }
		public TerminalNode GREATER() { return getToken(FLangParser.GREATER, 0); }
		public TerminalNode LESS_EQ() { return getToken(FLangParser.LESS_EQ, 0); }
		public TerminalNode GREATER_EQ() { return getToken(FLangParser.GREATER_EQ, 0); }
		public TerminalNode EQUAL() { return getToken(FLangParser.EQUAL, 0); }
		public TerminalNode NOT_EQ() { return getToken(FLangParser.NOT_EQ, 0); }
		public TerminalNode AND() { return getToken(FLangParser.AND, 0); }
		public TerminalNode OR() { return getToken(FLangParser.OR, 0); }
		public TerminalNode XOR() { return getToken(FLangParser.XOR, 0); }
		public OperatorSignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operatorSign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FLangParserListener ) ((FLangParserListener)listener).enterOperatorSign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FLangParserListener ) ((FLangParserListener)listener).exitOperatorSign(this);
		}
	}

	public final OperatorSignContext operatorSign() throws RecognitionException {
		OperatorSignContext _localctx = new OperatorSignContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_operatorSign);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PLUS) | (1L << MINUS) | (1L << MULT) | (1L << DIVISION) | (1L << LESS) | (1L << GREATER) | (1L << LESS_EQ) | (1L << GREATER_EQ) | (1L << EQUAL) | (1L << NOT_EQ) | (1L << AND) | (1L << OR) | (1L << XOR))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SecondaryContext extends ParserRuleContext {
		public PrimaryContext primary() {
			return getRuleContext(PrimaryContext.class,0);
		}
		public SecondaryContext secondary() {
			return getRuleContext(SecondaryContext.class,0);
		}
		public TerminalNode LPAR() { return getToken(FLangParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(FLangParser.RPAR, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(FLangParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(FLangParser.COMMA, i);
		}
		public TerminalNode LSQUARE() { return getToken(FLangParser.LSQUARE, 0); }
		public TerminalNode RSQUARE() { return getToken(FLangParser.RSQUARE, 0); }
		public TerminalNode DOT() { return getToken(FLangParser.DOT, 0); }
		public TerminalNode ID() { return getToken(FLangParser.ID, 0); }
		public TerminalNode INT_LIT() { return getToken(FLangParser.INT_LIT, 0); }
		public SecondaryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_secondary; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FLangParserListener ) ((FLangParserListener)listener).enterSecondary(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FLangParserListener ) ((FLangParserListener)listener).exitSecondary(this);
		}
	}

	public final SecondaryContext secondary() throws RecognitionException {
		return secondary(0);
	}

	private SecondaryContext secondary(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		SecondaryContext _localctx = new SecondaryContext(_ctx, _parentState);
		SecondaryContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_secondary, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(110);
			primary();
			}
			_ctx.stop = _input.LT(-1);
			setState(138);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(136);
					switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
					case 1:
						{
						_localctx = new SecondaryContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_secondary);
						setState(112);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(113);
						match(LPAR);
						setState(122);
						_la = _input.LA(1);
						if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << FUNC) | (1L << TRUE) | (1L << FALSE) | (1L << INT_LIT) | (1L << REAL_LIT) | (1L << RAT_LIT) | (1L << COMP_LIT) | (1L << STR_LIT) | (1L << LPAR) | (1L << LSQUARE) | (1L << LCURLY) | (1L << ID))) != 0)) {
							{
							setState(114);
							expression(0);
							setState(119);
							_errHandler.sync(this);
							_la = _input.LA(1);
							while (_la==COMMA) {
								{
								{
								setState(115);
								match(COMMA);
								setState(116);
								expression(0);
								}
								}
								setState(121);
								_errHandler.sync(this);
								_la = _input.LA(1);
							}
							}
						}

						setState(124);
						match(RPAR);
						}
						break;
					case 2:
						{
						_localctx = new SecondaryContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_secondary);
						setState(125);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(126);
						match(LSQUARE);
						setState(127);
						expression(0);
						setState(128);
						match(RSQUARE);
						}
						break;
					case 3:
						{
						_localctx = new SecondaryContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_secondary);
						setState(130);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(131);
						match(DOT);
						setState(132);
						match(ID);
						}
						break;
					case 4:
						{
						_localctx = new SecondaryContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_secondary);
						setState(133);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(134);
						match(DOT);
						setState(135);
						match(INT_LIT);
						}
						break;
					}
					} 
				}
				setState(140);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class PrimaryContext extends ParserRuleContext {
		public ElementaryContext elementary() {
			return getRuleContext(ElementaryContext.class,0);
		}
		public ConditionalContext conditional() {
			return getRuleContext(ConditionalContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public TupleContext tuple() {
			return getRuleContext(TupleContext.class,0);
		}
		public MapContext map() {
			return getRuleContext(MapContext.class,0);
		}
		public TerminalNode LPAR() { return getToken(FLangParser.LPAR, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(FLangParser.RPAR, 0); }
		public PrimaryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primary; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FLangParserListener ) ((FLangParserListener)listener).enterPrimary(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FLangParserListener ) ((FLangParserListener)listener).exitPrimary(this);
		}
	}

	public final PrimaryContext primary() throws RecognitionException {
		PrimaryContext _localctx = new PrimaryContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_primary);
		try {
			setState(151);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(141);
				elementary();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(142);
				conditional();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(143);
				function();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(144);
				array();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(145);
				tuple();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(146);
				map();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(147);
				match(LPAR);
				setState(148);
				expression(0);
				setState(149);
				match(RPAR);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElementaryContext extends ParserRuleContext {
		public TerminalNode FALSE() { return getToken(FLangParser.FALSE, 0); }
		public TerminalNode TRUE() { return getToken(FLangParser.TRUE, 0); }
		public TerminalNode INT_LIT() { return getToken(FLangParser.INT_LIT, 0); }
		public TerminalNode REAL_LIT() { return getToken(FLangParser.REAL_LIT, 0); }
		public TerminalNode RAT_LIT() { return getToken(FLangParser.RAT_LIT, 0); }
		public TerminalNode COMP_LIT() { return getToken(FLangParser.COMP_LIT, 0); }
		public TerminalNode STR_LIT() { return getToken(FLangParser.STR_LIT, 0); }
		public TerminalNode ID() { return getToken(FLangParser.ID, 0); }
		public ElementaryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elementary; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FLangParserListener ) ((FLangParserListener)listener).enterElementary(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FLangParserListener ) ((FLangParserListener)listener).exitElementary(this);
		}
	}

	public final ElementaryContext elementary() throws RecognitionException {
		ElementaryContext _localctx = new ElementaryContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_elementary);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TRUE) | (1L << FALSE) | (1L << INT_LIT) | (1L << REAL_LIT) | (1L << RAT_LIT) | (1L << COMP_LIT) | (1L << STR_LIT) | (1L << ID))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionalContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(FLangParser.IF, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode THEN() { return getToken(FLangParser.THEN, 0); }
		public TerminalNode ELSE() { return getToken(FLangParser.ELSE, 0); }
		public TerminalNode END() { return getToken(FLangParser.END, 0); }
		public ConditionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditional; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FLangParserListener ) ((FLangParserListener)listener).enterConditional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FLangParserListener ) ((FLangParserListener)listener).exitConditional(this);
		}
	}

	public final ConditionalContext conditional() throws RecognitionException {
		ConditionalContext _localctx = new ConditionalContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_conditional);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			match(IF);
			setState(156);
			expression(0);
			setState(157);
			match(THEN);
			setState(158);
			expression(0);
			setState(159);
			match(ELSE);
			setState(160);
			expression(0);
			setState(161);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public LoopStatementContext loopStatement() {
			return getRuleContext(LoopStatementContext.class,0);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public BreakStatementContext breakStatement() {
			return getRuleContext(BreakStatementContext.class,0);
		}
		public PrintStatementContext printStatement() {
			return getRuleContext(PrintStatementContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FLangParserListener ) ((FLangParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FLangParserListener ) ((FLangParserListener)listener).exitStatement(this);
		}
	}
